--- a/ApplicationBDO/packages.config
+++ b/ApplicationBDO/packages.config
@@ -2,11 +2,16 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="BouncyCastle" version="1.8.5" targetFramework="net472" />
   <package id="Crc32C.NET" version="1.0.5.0" targetFramework="net472" />
   <package id="DnsClient" version="1.2.0" targetFramework="net472" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="Google.Protobuf" version="3.11.4" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4" version="1.1.11" targetFramework="net472" />
+  <package id="K4os.Compression.LZ4.Streams" version="1.1.11" targetFramework="net472" />
+  <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="Lambda2Js.Signed" version="3.1.3" targetFramework="net472" />
   <package id="LiteDB" version="5.0.10" targetFramework="net472" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.2" targetFramework="net472" />
@@ -36,12 +41,15 @@
   <package id="MongoDB.Driver" version="2.10.2" targetFramework="net472" />
   <package id="MongoDB.Driver.Core" version="2.10.2" targetFramework="net472" />
   <package id="MongoDB.Libmongocrypt" version="1.0.0" targetFramework="net472" />
+  <package id="MySql.Data" version="8.0.11" targetFramework="net472" />
+  <package id="MySql.Data.EntityFramework" version="8.0.11" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="RavenDB.Client" version="5.1.4" targetFramework="net472" />
   <package id="RavenDB.Server" version="3.5.9" targetFramework="net472" />
   <package id="SharpCompress" version="0.23.0" targetFramework="net472" />
   <package id="Snappy.NET" version="1.1.1.8" targetFramework="net472" />
+  <package id="SSH.NET" version="2020.0.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
